- 모바일 Gnb 완성

--- a/src/components/sdf/view/SdfHeaderComponent.module.scss
+++ b/src/components/sdf/view/SdfHeaderComponent.module.scss
@@ -3,6 +3,11 @@
   width: 100%;
   padding-top: 32px;
 
+  @media (max-width: 900px) {
+    padding-top: 0;
+    height: 60px;
+  }
+
   .search__wrap {
     display: none;
   }
@@ -70,6 +75,10 @@
 
   .gnbBottom__overlay {
     height: 0;
+
+    @media (max-width: 900px) {
+      display: none;
+    }
   }
 
   .gnbBottom__overlay__active {
@@ -85,6 +94,10 @@
     transition: height ease 0.2s;
     z-index: 9;
     visibility: visible;
+
+    @media (max-width: 900px) {
+      display: none;
+    }
   }
 
   .header__inner {
@@ -94,6 +107,10 @@
     width: 100%;
     max-width: 1180px;
     margin: 0 auto;
+
+    @media (max-width: 1180px) {
+      padding: 0 10px;
+    }
   }
 
   .logo {
@@ -101,6 +118,12 @@
     width: 380px;
     height: 97px;
     background: url(/images/sdf/gnb/sdf_logo.gif) no-repeat center / contain;
+
+    @media (max-width: 900px) {
+      width: 145px;
+      height: 60px;
+      background-position: center left;
+    }
   }
 
   .gnbWrap {
@@ -114,6 +137,14 @@
       justify-content: flex-end;
       column-gap: 10px;
 
+      @media (max-width: 1180px) {
+        column-gap: 0px;
+      }
+
+      @media (max-width: 900px) {
+        display: none;
+      }
+
       .gnbTop__menu {
         display: flex;
         justify-content: space-between;
@@ -121,6 +152,10 @@
 
         .gnbTop__menuList {
           padding: 0 15px;
+
+          @media (max-width: 1180px) {
+            padding: 0 10px;
+          }
         }
 
         .gnbTop__menuItem {
@@ -144,6 +179,10 @@
             outline: none !important;
             outline-offset: 0px;
             outline-width: 0px;
+
+            @media (max-width: 1180px) {
+              right: -10px;
+            }
           }
         }
       }
@@ -154,6 +193,11 @@
         align-items: center;
         column-gap: 10px;
         margin-left: 15px;
+
+        @media (max-width: 1180px) {
+          column-gap: 5px;
+          margin-left: 5px;
+        }
       }
     }
 
@@ -176,6 +220,14 @@
         font-weight: 700;
         letter-spacing: -1.5px;
         word-break: keep-all;
+
+        @media (min-width: 901px) and (max-width: 1180px) {
+          padding-right: 40px;
+        }
+
+        @media (max-width: 900px) {
+          display: none;
+        }
 
         .gnbBottom__itemLink {
           display: flex;
@@ -220,7 +272,165 @@
         width: 64px;
         height: 64px;
         background-color: #e5e5e5;
+
+        @media (max-width: 900px) {
+          width: 30px;
+          height: 30px;
+          background-color: #fff;
+        }
       }
     }
+  }
+
+  .m__gnbMenuBtnWrap {
+    display: none;
+  }
+
+  .m__gnbMenu {
+    display: none;
+  }
+
+  @media (max-width: 900px) {
+    .m__gnbMenuBtnWrap {
+      display: block;
+      margin: 0 -5px 0 5px;
+
+      .m__gnbMenuBtn {
+        position: relative;
+        width: 30px;
+        height: 25px;
+      }
+
+      .m__gnbMenuLine:nth-child(2) {
+        top: 11px;
+      }
+
+      .m__gnbMenuBtn.active .m__gnbMenuLine:nth-child(2) {
+        display: none;
+      }
+
+      .m__gnbMenuLine:last-child {
+        top: 18px;
+      }
+
+      .m__gnbMenuBtn.active .m__gnbMenuLine:last-child {
+        top: 20px;
+        left: 3.4px;
+        transform: rotate(-44deg);
+      }
+
+      .m__gnbMenuLine {
+        width: 24px;
+        height: 2px;
+        left: 0px;
+        top: 3px;
+        background-color: #5e5e5e;
+        position: absolute;
+        transform-origin: left 0px;
+        transition: 0.3s all;
+      }
+
+      .m__gnbMenuBtn.active .m__gnbMenuLine {
+        transform: rotate(45deg);
+        left: 3px;
+        top: 4px;
+      }
+    }
+
+    .m__gnbMenu {
+      position: fixed;
+      top: 61px;
+      bottom: 0;
+      right: 0;
+      display: block;
+      width: 0;
+      transition: 0.3s all;
+    }
+
+    .m__gnbMenu.active {
+      position: fixed;
+      top: 61px;
+      bottom: 0;
+      right: 0;
+      display: block;
+      width: 300px;
+      color: #333;
+      font-size: 18px;
+      background-color: #fff;
+      transition: 0.3s all;
+      overflow-y: scroll;
+      z-index: 1000;
+    }
+
+    .m__gnbMenuLoginWrap {
+      display: grid;
+      align-items: center;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      font-size: 16px;
+      color: #fff;
+      text-align: center;
+
+      .m__gnbMenuLogin {
+        padding: 15px 10px;
+        text-align: center;
+        border-right: 1px solid #3168bc;
+        background-color: #144796;
+      }
+
+      .m__gnbMenuLoginKrWrap {
+        display: flex;
+        justify-content: center;
+        column-gap: 16px;
+        padding: 15px 10px;
+        color: #9e9e9e;
+        border-right: 1px solid #454545;
+        background-color: #454545;
+
+        .m__gnbMenuLoginKr {
+          position: relative;
+          color: #fff;
+          font-weight: 700;
+
+          &:after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            right: -9px;
+            width: 1px;
+            height: 13px;
+            background-color: #ccc;
+            transform: translateY(-50%);
+            z-index: 1;
+          }
+        }
+      }
+    }
+
+    .m__gnbMenuBottom {
+      padding: 0 15px;
+    }
+
+    .m__gnbMenuList {
+      display: block;
+      font-size: 18px;
+      color: #333;
+      border-bottom: 1px solid #ddd;
+      background: url(/images/sdf/ico/ico_down_arrow02.png) no-repeat
+        calc(100% - 10px);
+
+      .m__gnbMenuListLink {
+        display: block;
+        padding: 15px;
+      }
+
+      .m__gnbMenuDropWrap {
+        display: none;
+      }
+    }
+
+    // .m__gnbMenuList.m__Active {
+    //   background: url(/images/sdf/ico/ico_up_arrow02.png) no-repeat
+    //     calc(100% - 10px);
+    // }
   }
 }
