--- a/src/components/sdf/view/SdfBannerComponent.module.scss
+++ b/src/components/sdf/view/SdfBannerComponent.module.scss
@@ -13,6 +13,14 @@
     margin: 0 auto;
     column-gap: 20px;
 
+    @media (max-width: 1180px) {
+      padding: 0px 20px;
+    }
+
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+
     .banner__sns {
       display: flex;
       flex-direction: column;
@@ -27,6 +35,27 @@
       letter-spacing: -1px;
       background-color: white;
 
+      @media (max-width: 768px) {
+        margin-bottom: 10px;
+        padding: 15px 0;
+        font-size: 12px;
+      }
+
+      .banner__snsImg {
+        width: 100%;
+        height: 42px;
+
+        img {
+          max-width: 100%;
+          height: auto;
+        }
+
+        @media (max-width: 768px) {
+          height: 30px;
+          padding: 0 15px;
+        }
+      }
+
       .banner__snsListWrap {
         display: grid;
         align-items: center;
@@ -36,6 +65,10 @@
 
         .banner__snsList + .banner__snsList {
           border-left: solid 1px #e5e5e5;
+
+          @media (max-width: 768px) {
+            border-left: none;
+          }
         }
 
         .banner__snsListItem {
@@ -43,6 +76,17 @@
           padding: 10px 20px;
           flex-direction: column;
           row-gap: 20px;
+
+          @media (min-width: 768px) and (max-width: 1180px) {
+            row-gap: 15px;
+            padding: 10px;
+            font-size: 14px;
+          }
+
+          @media (max-width: 768px) {
+            row-gap: 15px;
+            padding: 5px;
+          }
         }
 
         // $snsList: (blog, fb, yt, instagram);
@@ -60,14 +104,15 @@
     .banner__slideContainer {
       .banner__slideImg {
         width: 100%;
-        max-width: 580px;
         height: 196px;
-        object-fit: contain;
+
+        @media (max-width: 768px) {
+          padding: 10px 0;
+        }
 
         img {
-          width: 100%;
-          height: 100%;
-          object-fit: contain;
+          max-width: 100%;
+          height: auto;
         }
       }
 
