--- a/src/components/sdf/view/SdfFooterComponent.module.scss
+++ b/src/components/sdf/view/SdfFooterComponent.module.scss
@@ -7,12 +7,23 @@
 .footerInner {
   margin: 0 auto;
   max-width: 1180px;
+
+  @media (max-width: 1180px) {
+    padding: 20px;
+  }
 }
 
 .footerInner__top {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media (max-width: 768px) {
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    row-gap: 20px;
+  }
 
   .footerInner__topRight {
     display: flex;
@@ -28,6 +39,11 @@
     display: flex;
     align-items: center;
     column-gap: 10px;
+
+    @media (max-width: 768px) {
+      flex-wrap: wrap;
+      row-gap: 10px;
+    }
 
     .footerInner__topRightDropWrap {
       display: flex;
@@ -81,6 +97,13 @@
     column-gap: 30px;
     font-size: 18px;
 
+    @media (max-width: 768px) {
+      align-items: flex-start;
+      flex-direction: column;
+      row-gap: 10px;
+      text-align: left;
+    }
+
     .footerInner__topListPersonal {
       font-weight: 700;
     }
@@ -94,17 +117,43 @@
   padding-top: 20px;
   border-top: solid 1px #45464a;
   letter-spacing: -0.5px;
+  line-height: 1.2;
+
+  @media (max-width: 1180px) {
+    flex-direction: column;
+    row-gap: 25px;
+  }
 
   .footerInner__bottomTel {
     display: flex;
     align-items: center;
     column-gap: 15px;
     margin-top: 10px;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-top: 15px;
+      row-gap: 5px;
+    }
   }
 
   .footerInner__bottomImg {
     display: flex;
     align-items: center;
     column-gap: 12px;
+    padding: 0 10px;
+    width: 100%;
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    @media (max-width: 768px) {
+      align-items: flex-start;
+      flex-direction: column;
+      row-gap: 15px;
+    }
   }
 }
