--- a/src/components/sdf/view/SdfMainSlideComponent.module.scss
+++ b/src/components/sdf/view/SdfMainSlideComponent.module.scss
@@ -5,6 +5,15 @@
     #fae5ee;
   letter-spacing: -1.5px;
 
+  @media (max-width: 1180px) {
+    height: 790px;
+    background: #fae5ee;
+  }
+
+  @media (max-width: 768px) {
+    height: 600px;
+  }
+
   .slideInner {
     max-width: 1180px;
     margin: 0 auto;
@@ -14,9 +23,22 @@
     position: absolute;
     top: 130px;
 
+    @media (max-width: 1300px) {
+      top: 100px;
+      padding: 0px 20px;
+    }
+
+    @media (max-width: 768px) {
+      top: 40px;
+    }
+
     .slideTitle {
       font-size: 35px;
       color: #c50054;
+
+      @media (max-width: 768px) {
+        font-size: 18px;
+      }
     }
 
     .slideSubTitle {
@@ -24,6 +46,10 @@
       font-size: 42px;
       font-weight: 700;
       color: #8e003d;
+
+      @media (max-width: 768px) {
+        font-size: 30px;
+      }
     }
 
     .slideDesc {
@@ -32,12 +58,25 @@
       font-weight: 500;
       color: #5a5a5a;
       line-height: 1.2;
+
+      @media (max-width: 768px) {
+        margin-top: 14px;
+        font-size: 16px;
+      }
     }
   }
 
   .slideImg {
     width: 100%;
     height: 520px;
+
+    @media (max-width: 1180px) {
+      height: 790px;
+    }
+
+    @media (max-width: 768px) {
+      height: 600px;
+    }
   }
 }
 
@@ -52,6 +91,10 @@
   max-width: 1180px;
   transform: translateX(-50%);
   z-index: 1;
+
+  @media (max-width: 1300px) {
+    display: none;
+  }
 
   .controlInner {
     display: flex;
@@ -94,5 +137,14 @@
       no-repeat
       center
       right;
+
+    @media (max-width: 1180px) {
+      background: url(/images/sdf/slide/img_visual0#{$i}.png) no-repeat right
+        bottom;
+    }
+
+    @media (max-width: 7680px) {
+      background-size: 58%;
+    }
   }
 }
