--- a/src/components/sdf/view/SdfWorkComponent.module.scss
+++ b/src/components/sdf/view/SdfWorkComponent.module.scss
@@ -4,9 +4,17 @@
     #edf5fc;
   letter-spacing: -1px;
 
+  @media (max-width: 768px) {
+    padding-bottom: 200px;
+  }
+
   .workInner {
     max-width: 1180px;
     margin: 0 auto;
+
+    @media (max-width: 1180px) {
+      padding: 0 20px;
+    }
   }
 
   .workInner__title {
@@ -14,13 +22,19 @@
 
     .h1 {
       font-size: 40px;
+
+      @media (max-width: 768px) {
+        font-size: 28px;
+      }
     }
 
     .h3 {
       font-size: 20px;
       font-weight: 500;
       margin-top: 20px;
+      padding: 0px 20px;
       color: #7b7b7b;
+      line-height: 1.3;
     }
   }
 
@@ -29,10 +43,18 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
     margin-top: 50px;
 
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+
     .workInner__descImg {
       display: block;
       height: 100%;
       padding-top: 300px;
+
+      @media (max-width: 768px) {
+        padding-top: 170px;
+      }
     }
 
     $works: (
@@ -46,6 +68,10 @@
         background:
           url(/images/sdf/info/img_q0#{$number}.png) no-repeat center,
           #fae5ee;
+
+        @media (max-width: 768px) {
+          background-size: 26%;
+        }
       }
     }
 
@@ -54,6 +80,11 @@
       padding: 50px 20px 40px;
       border: 1px solid #ddd;
       background-color: #fff;
+
+      @media (max-width: 768px) {
+        padding: 20px 20px;
+        margin-bottom: 20px;
+      }
 
       &.workInner__descWrap:after {
         content: "";
@@ -64,6 +95,10 @@
         margin-top: -20px;
         border: 20px solid transparent;
         border-right-color: #ffffff;
+
+        @media (max-width: 768px) {
+          display: none;
+        }
       }
 
       &.descWrap__first:after {
@@ -109,6 +144,11 @@
         color: #000000;
         word-break: keep-all;
         line-height: 1.3;
+
+        @media (max-width: 768px) {
+          max-width: initial;
+          font-size: 18px;
+        }
       }
 
       .workInner__descList {
@@ -118,7 +158,12 @@
         margin-top: 20px;
         font-size: 18px;
         font-weight: 500;
+        line-height: 1.2;
         color: #777777;
+
+        @media (max-width: 768px) {
+          font-size: 16px;
+        }
       }
 
       .workInner__descLink {
@@ -129,6 +174,22 @@
         font-size: 18px;
         font-weight: 500;
         color: #7b7b7b;
+
+        @media (max-width: 768px) {
+          column-gap: 10px;
+          margin-top: 20px;
+          font-size: 16px;
+        }
+
+        .workInner__descLinkImg {
+          width: 26px;
+          height: 26px;
+
+          @media (max-width: 768px) {
+            width: 20px;
+            height: 20px;
+          }
+        }
       }
     }
   }
