--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -174,6 +174,15 @@ select {
   overflow: hidden;
 }
 
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
