--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,3 +187,57 @@ body::-webkit-scrollbar {
     color-scheme: dark;
   }
 }
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 100;
+	src: local('SUIT Thin'), url('/font/suit/SUIT-Thin.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 200;
+	src: local('SUIT ExtraLight'), url('/font/suit/SUIT-ExtraLight.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 300;
+	src: local('SUIT Light'), url('/SUIT-Light.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 400;
+	src: local('SUIT Regular'), url('/font/suit/SUIT-Regular.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 500;
+	src: local('SUIT Medium'), url('/font/suit/SUIT-Medium.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 600;
+	src: local('SUIT SemiBold'), url('/font/suit/SUIT-SemiBold.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 700;
+	src: local('SUIT Bold'), url('/font/suit/SUIT-Bold.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 800;
+	src: local('SUIT ExtraBold'), url('/font/suit/SUIT-ExtraBold.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'SUIT';
+	font-weight: 900;
+	src: local('SUIT Heavy'), url('/font/suit/SUIT-Heavy.woff2') format('woff2');
+}
