--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,56 +1,405 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  padding: 2rem 3rem;
-  font-family: ‘SUIT’, sans-serif;
-  font-style: italic;
-  color: white;
-  background-color: black;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+@font-face {
+  font-family: "SUIT";
+  font-weight: 100;
+  src:
+    local("SUIT Thin"),
+    url("/font/SUIT-Thin.woff2") format("woff2");
 }
 
-.title_wrap {
+@font-face {
+  font-family: "SUIT";
+  font-weight: 200;
+  src:
+    local("SUIT ExtraLight"),
+    url("/font/SUIT-ExtraLight.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "SUIT";
+  font-weight: 300;
+  src:
+    local("SUIT Light"),
+    url("/SUIT-Light.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "SUIT";
+  font-weight: 400;
+  src:
+    local("SUIT Regular"),
+    url("/font/SUIT-Regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "SUIT";
+  font-weight: 500;
+  src:
+    local("SUIT Medium"),
+    url("/font/SUIT-Medium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "SUIT";
+  font-weight: 600;
+  src:
+    local("SUIT SemiBold"),
+    url("/font/SUIT-SemiBold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "SUIT";
+  font-weight: 700;
+  src:
+    local("SUIT Bold"),
+    url("/font/SUIT-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "SUIT";
+  font-weight: 800;
+  src:
+    local("SUIT ExtraBold"),
+    url("/font/SUIT-ExtraBold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "SUIT";
+  font-weight: 900;
+  src:
+    local("SUIT Heavy"),
+    url("/font/SUIT-Heavy.woff2") format("woff2");
+}
+
+.wrap {
   position: relative;
+  height: 100%;
+  font-family: "SUIT", sans-serif;
+  color: white;
+  background-color: black;
 
-  .title {
-    position: relative;
-    font-size: 180px;
-    font-weight: 900;
-    text-transform: capitalize;
-    color: transparent;
-    -webkit-text-stroke: 5px #ffffff;
-
-    &:before {
-      content: attr(data-fill-text);
-      position: absolute;
-      width: 0;
-      height: 100%;
-      color: #ffffff;
-      -webkit-text-stroke: 0px transparent;
-      overflow: hidden;
-      // transition: width 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
-      animation: textBlink 1.5s ease infinite;
-      -webkit-animation: textBlink 1.5s ease infinite;
-    }
-
-    // &:hover::before {
-    //   width: 100%;
-    // }
+  img {
+    max-width: 100%;
+    height: auto;
   }
 
-  .subtitle {
+  .arrow {
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    bottom: -120px;
+    top: 93vh;
     left: 50%;
     transform: translateX(-50%);
 
-    .subtitle_img {
+    .arrow_img {
       max-width: 26px;
       animation: arrowBlink 1.5s ease infinite;
       -webkit-animation: arrowBlink 1.5s ease infinite;
+    }
+  }
+
+  .nav {
+    position: fixed;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 50px;
+    max-width: 258px;
+    margin: 0 auto;
+    z-index: 10;
+
+    .nav_inner {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      column-gap: 5px;
+      height: 49px;
+      padding: 6px 0;
+      font-weight: 700;
+      text-align: center;
+      border-radius: 999px;
+      background-color: #fff;
+    }
+
+    .nav_link {
+      padding: 8px 12px;
+      font-family: "SUIT", sans-serif;
+      font-size: 16px;
+      font-weight: 900;
+      color: #121212;
+      border-radius: 999px;
+      cursor: pointer;
+    }
+
+    .nav_link_active {
+      font-family: "SUIT", sans-serif;
+      font-size: 16px;
+      font-weight: 900;
+      color: #fff;
+      background-color: #121212;
+    }
+  }
+
+  .main {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    padding: 0 3rem;
+
+    .solid_item01 {
+      position: absolute;
+      top: 1rem;
+      left: 22rem;
+      width: 200px;
+
+      @media (max-width: 1440px) {
+        width: 150px;
+      }
+
+      img {
+        filter: blur(5px);
+        -webkit-filter: blur(5px);
+      }
+    }
+
+    .solid_item02 {
+      position: absolute;
+      top: 50%;
+      right: 5rem;
+      width: 650px;
+      transform: translateY(-50%);
+
+      @media (max-width: 1440px) {
+        width: 450px;
+      }
+    }
+
+    .title_wrap {
+      position: relative;
+
+      .title {
+        position: relative;
+        top: 8rem;
+        font-family: "suit", sans-serif;
+        font-size: 9vw;
+        font-weight: 900;
+        text-transform: capitalize;
+        color: transparent;
+        -webkit-text-stroke: 3px #ffffff;
+
+        &:before {
+          content: attr(data-fill-text);
+          position: absolute;
+          width: 0;
+          height: 100%;
+          color: #ffffff;
+          -webkit-text-stroke: 0px transparent;
+          overflow: hidden;
+          animation: textBlink 1.5s ease infinite;
+          -webkit-animation: textBlink 1.5s ease infinite;
+        }
+      }
+    }
+  }
+
+  .project_wrap {
+    margin-top: 500px;
+    padding: 0 3rem 100px;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: -0.02em;
+
+    .project_wrap_title {
+      padding: 2rem;
+      text-align: center;
+
+      .project_wrap_subtitle {
+        font-size: 16px;
+      }
+    }
+
+    .project_inner {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      justify-content: center;
+      column-gap: 20px;
+      row-gap: 70px;
+      font-size: 20px;
+      font-weight: 600;
+
+      @media (max-width: 768px) {
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+      }
+
+      .project_img_wrap {
+        position: relative;
+        width: 100%;
+        display: block;
+        border-radius: 10px;
+        overflow: hidden;
+
+        &::before {
+          content: "";
+          display: block;
+          // aspect-ratio: 579/290;
+          padding-top: 60%;
+        }
+
+        .project_img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          display: block;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+          cursor: pointer;
+
+          &:hover {
+            transform: scale(1.05);
+          }
+        }
+      }
+
+      .project_inner_desc_wrap {
+        margin-top: 24px;
+
+        .project_title {
+          font-size: 20px;
+        }
+
+        .project_desc {
+          margin-top: 16px;
+          font-size: 16px;
+          font-weight: 500;
+          word-break: keep-all;
+        }
+
+        .project_tag {
+          margin-top: 20px;
+          font-size: 15px;
+          color: #cccccc;
+        }
+
+        .project_btn_wrap {
+          display: flex;
+          align-items: center;
+          column-gap: 10px;
+          margin-top: 28px;
+          font-weight: 700;
+
+          .project_btn_view {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            column-gap: 6px;
+            padding: 0 15px;
+            height: 34px;
+            font-size: 16px;
+            font-weight: 700;
+            font-family: "suit", sans-serif;
+            line-height: 18.2px;
+            letter-spacing: -0.02em;
+            color: #121212;
+            border-radius: 4px;
+            background-color: #fff;
+
+            img {
+              width: 18px;
+              max-width: 100%;
+              height: auto;
+            }
+          }
+
+          .project_btn_git {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            column-gap: 6px;
+            padding: 0 10px;
+            height: 34px;
+            font-size: 16px;
+            font-weight: 700;
+            font-family: "suit", sans-serif;
+            line-height: 18.2px;
+            letter-spacing: -0.02em;
+            color: #fff;
+            border-radius: 4px;
+            border: 1px solid rgba(255, 255, 255, 0.36);
+          }
+
+          .project_btn_more {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            column-gap: 6px;
+            padding: 0 15px;
+            height: 34px;
+            font-size: 16px;
+            font-weight: 700;
+            font-family: "suit", sans-serif;
+            line-height: 18.2px;
+            letter-spacing: -0.02em;
+            color: #121212;
+            border-radius: 4px;
+            background-color: #fff;
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+  }
+
+  .footer {
+    position: relative;
+    padding: 400px 0 50px;
+
+    .solid_item03 {
+      position: absolute;
+      bottom: 50px;
+      right: -50px;
+      width: 250px;
+      transform: translateY(-50%);
+    }
+
+    .footer_title {
+      font-size: 96px;
+      font-weight: 700;
+      padding: 0 3rem;
+    }
+
+    .footer_desc {
+      margin-top: 30px;
+      font-size: 32px;
+      font-weight: 700;
+
+      .footer_name {
+        padding: 20px 3rem;
+        border-top: solid 1px #fff;
+      }
+
+      .footer_mail {
+        padding: 20px 3rem;
+        border-top: solid 1px #fff;
+      }
+
+      .footer_tel {
+        padding: 20px 3rem;
+        border-top: solid 1px #fff;
+        border-bottom: solid 1px #fff;
+      }
+    }
+
+    .footer_Copyright {
+      margin-top: 200px;
+      text-align: center;
     }
   }
 }
