--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -259,12 +259,18 @@
           display: block;
           background-size: cover;
           background-repeat: no-repeat;
-          background-position: center;
+          background-position: top center;
           cursor: pointer;
+          transition: all ease 0.3s;
 
           &:hover {
-            transform: scale(1.05);
+            transform: scale(1.1);
           }
+        }
+
+        .project_img_irept {
+          background-color: #242424;
+          background-size: 35%;
         }
       }
 
@@ -273,10 +279,12 @@
 
         .project_title {
           font-size: 20px;
+          font-weight: bold;
+          line-height: 130%;
         }
 
         .project_desc {
-          margin-top: 16px;
+          margin-top: 6px;
           font-size: 16px;
           font-weight: 500;
           word-break: keep-all;
@@ -300,10 +308,10 @@
             align-items: center;
             justify-content: center;
             column-gap: 6px;
-            padding: 0 15px;
-            height: 34px;
+            padding: 0 10px;
+            height: 38px;
             font-size: 16px;
-            font-weight: 700;
+            font-weight: 600;
             font-family: "suit", sans-serif;
             line-height: 18.2px;
             letter-spacing: -0.02em;
@@ -324,15 +332,15 @@
             justify-content: center;
             column-gap: 6px;
             padding: 0 10px;
-            height: 34px;
+            height: 38px;
             font-size: 16px;
-            font-weight: 700;
+            font-weight: 600;
             font-family: "suit", sans-serif;
             line-height: 18.2px;
             letter-spacing: -0.02em;
             color: #fff;
             border-radius: 4px;
-            border: 1px solid rgba(255, 255, 255, 0.36);
+            background: #333;
           }
 
           .project_btn_more {
