--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,77 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 100;
-  src:
-    local("SUIT Thin"),
-    url("/font/SUIT-Thin.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 200;
-  src:
-    local("SUIT ExtraLight"),
-    url("/font/SUIT-ExtraLight.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 300;
-  src:
-    local("SUIT Light"),
-    url("/SUIT-Light.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 400;
-  src:
-    local("SUIT Regular"),
-    url("/font/SUIT-Regular.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 500;
-  src:
-    local("SUIT Medium"),
-    url("/font/SUIT-Medium.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 600;
-  src:
-    local("SUIT SemiBold"),
-    url("/font/SUIT-SemiBold.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 700;
-  src:
-    local("SUIT Bold"),
-    url("/font/SUIT-Bold.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 800;
-  src:
-    local("SUIT ExtraBold"),
-    url("/font/SUIT-ExtraBold.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "SUIT";
-  font-weight: 900;
-  src:
-    local("SUIT Heavy"),
-    url("/font/SUIT-Heavy.woff2") format("woff2");
-}
-
 .wrap {
   position: relative;
   height: 100%;
@@ -246,7 +172,6 @@
         &::before {
           content: "";
           display: block;
-          // aspect-ratio: 579/290;
           padding-top: 60%;
         }
 
@@ -260,7 +185,7 @@
           background-size: cover;
           background-repeat: no-repeat;
           background-position: top center;
-          cursor: pointer;
+          cursor: zoom-in;
           transition: all ease 0.3s;
 
           &:hover {
