--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -54,7 +54,7 @@
       padding: 8px 12px;
       font-family: "SUIT", sans-serif;
       font-size: 16px;
-      font-weight: 900;
+      font-weight: bold;
       color: #121212;
       border-radius: 999px;
       cursor: pointer;
@@ -63,7 +63,7 @@
     .nav_link_active {
       font-family: "SUIT", sans-serif;
       font-size: 16px;
-      font-weight: 900;
+      font-weight: bold;
       color: #fff;
       background-color: #121212;
     }
@@ -76,6 +76,10 @@
     min-height: 100vh;
     padding: 0 3rem;
 
+    @media (max-width: 768px) {
+      padding: 0 2rem;
+    }
+
     .solid_item01 {
       position: absolute;
       top: 1rem;
@@ -83,6 +87,8 @@
       width: 200px;
 
       @media (max-width: 1440px) {
+        top: 1rem;
+        left: -4rem;
         width: 150px;
       }
 
@@ -100,22 +106,31 @@
       transform: translateY(-50%);
 
       @media (max-width: 1440px) {
-        width: 450px;
+        width: 350px;
+        top: 70%;
+        right: -10rem;
       }
     }
 
     .title_wrap {
       position: relative;
 
+      @media (max-width: 768px) {
+        display: none;
+      }
+
       .title {
         position: relative;
         top: 8rem;
         font-family: "suit", sans-serif;
         font-size: 9vw;
+      }
+
+      .title_none {
         font-weight: 900;
         text-transform: capitalize;
         color: transparent;
-        -webkit-text-stroke: 3px #ffffff;
+        -webkit-text-stroke: 2px #ffffff;
 
         &:before {
           content: attr(data-fill-text);
@@ -125,9 +140,50 @@
           color: #ffffff;
           -webkit-text-stroke: 0px transparent;
           overflow: hidden;
-          animation: textBlink 1.5s ease infinite;
-          -webkit-animation: textBlink 1.5s ease infinite;
+          animation: textBlink 1.5s ease;
+          animation-iteration-count: 1;
+          animation-fill-mode: forwards;
         }
+      }
+
+      .title_dev {
+        font-weight: 900;
+        color: #ffffff;
+      }
+    }
+
+    .title_wrap_mo {
+      position: relative;
+      display: none;
+      font-size: 36px;
+      text-align: center;
+
+      @media (max-width: 768px) {
+        display: block;
+      }
+
+      .title_mo {
+        position: relative;
+        top: 40vh;
+        font-family: "suit", sans-serif;
+      }
+
+      .title_none_mo {
+        position: relative;
+        font-family: "suit", sans-serif;
+        font-weight: bold;
+        text-align: center;
+        color: #ffffff;
+        -webkit-text-stroke: none;
+      }
+
+      .title_dev_mo {
+        margin-top: 14px;
+        position: relative;
+        font-family: "suit", sans-serif;
+        font-weight: 900;
+        color: #ffffff;
+        -webkit-text-stroke: none;
       }
     }
   }
@@ -139,6 +195,10 @@
     font-weight: 700;
     line-height: 1.5;
     letter-spacing: -0.02em;
+
+    @media (max-width: 768px) {
+      padding: 0 2rem 50px;
+    }
 
     .project_wrap_title {
       padding: 2rem;
@@ -294,18 +354,33 @@
     position: relative;
     padding: 400px 0 50px;
 
+    @media (max-width: 768px) {
+      padding: 200px 0 50px;
+    }
+
     .solid_item03 {
       position: absolute;
       bottom: 50px;
       right: -50px;
       width: 250px;
       transform: translateY(-50%);
+
+      @media (max-width: 768px) {
+        bottom: 50px;
+        right: -20px;
+        width: 150px;
+      }
     }
 
     .footer_title {
       font-size: 96px;
       font-weight: 700;
       padding: 0 3rem;
+
+      @media (max-width: 768px) {
+        font-size: 16vw;
+        padding: 0 2rem;
+      }
     }
 
     .footer_desc {
@@ -313,20 +388,36 @@
       font-size: 32px;
       font-weight: 700;
 
+      @media (max-width: 768px) {
+        font-size: 6vw;
+      }
+
       .footer_name {
         padding: 20px 3rem;
         border-top: solid 1px #fff;
+
+        @media (max-width: 768px) {
+          padding: 20px 2rem;
+        }
       }
 
       .footer_mail {
         padding: 20px 3rem;
         border-top: solid 1px #fff;
+
+        @media (max-width: 768px) {
+          padding: 20px 2rem;
+        }
       }
 
       .footer_tel {
         padding: 20px 3rem;
         border-top: solid 1px #fff;
         border-bottom: solid 1px #fff;
+
+        @media (max-width: 768px) {
+          padding: 20px 2rem;
+        }
       }
     }
 
@@ -342,12 +433,8 @@
     width: 0%;
   }
 
-  50% {
-    width: 100%;
-  }
-
   100% {
-    width: 0%;
+    width: 100%;
   }
 }
 
