--- a/src/components/sdf/view/SdfBannerComponent.module.scss
+++ b/src/components/sdf/view/SdfBannerComponent.module.scss
@@ -42,6 +42,9 @@
       }
 
       .banner__snsImg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 42px;
 
@@ -73,6 +76,8 @@
 
         .banner__snsListItem {
           display: flex;
+          align-items: center;
+          justify-content: center;
           padding: 10px 20px;
           flex-direction: column;
           row-gap: 20px;
