--- a/src/components/sdf/view/SdfHeaderComponent.module.scss
+++ b/src/components/sdf/view/SdfHeaderComponent.module.scss
@@ -268,6 +268,9 @@
       }
 
       .gnbBottom__searchBtn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 64px;
         height: 64px;
         background-color: #e5e5e5;
