--- a/src/components/sdf/view/SdfBannerComponent.module.scss
+++ b/src/components/sdf/view/SdfBannerComponent.module.scss
@@ -18,6 +18,7 @@
     }
 
     @media (max-width: 768px) {
+      width: 100%;
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
 
@@ -36,6 +37,7 @@
       background-color: white;
 
       @media (max-width: 768px) {
+        max-height: initial;
         margin-bottom: 10px;
         padding: 15px 0;
         font-size: 12px;
@@ -65,6 +67,11 @@
         grid-template-columns: repeat(4, minmax(0, 1fr));
         justify-content: space-between;
         margin: 25px auto 0px;
+
+        @media (max-width: 768px) {
+          grid-template-columns: repeat(2, minmax(0, 1fr));
+          gap: 20px;
+        }
 
         .banner__snsList + .banner__snsList {
           border-left: solid 1px #e5e5e5;
